--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
-  /: https://drive.google.com/drive/folders/17LSiMZC77N8tCJRW45TnHHGcG8V3SLG_
+  /:
+    url: "https://author-p53578-e342845.adobeaemcloud.com/bin/franklin.delivery/jazhou-adobe/xwalk-form/main"
+    type: "markup"
+    suffix: ".html"
